--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,21 @@
-<div class="header-container">
+<section id="side-container">
+
+    <a routerLink="/notes">
+        <i class="mdi mdi-note-multiple-outline" aria-hidden="true"></i><br>Notes
+    </a>
+
+</section>
+<section id="header-container">
     <header>
-        <h1 class="title">My Angular2 + TypeScript App</h1>
+        <h1 class="title">Curso Angular2</h1>
     </header>
-</div>
-
-<div class="main-container">
+</section>    
+<section id="main-container">
     <router-outlet></router-outlet>
-</div>
-
-<div class="footer-container">
+</section>
+<section id="footer-container">
     <footer>
         <a routerLink="/">Home</a> | <a routerLink="/about" routerLinkActive="active">About</a>
         <span>&copy; 2016</span>
     </footer>
-</div>
+</section>
