--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,35 +20,141 @@ a:hover {
     text-decoration: underline;
 }
 
-.header-container, .main-container, .footer-container {
-    width: 700px;
-    margin: 0 auto;
+#side-container {
+       height: 100vh;
+    width: 6vw;
+    background-color: #efefef;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    padding: 10px;
+    text-align: center;
+    padding-top: 4vh;
 }
 
-.main-container {
-    margin-bottom: 20px;
-    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
+#header-container {
+    height: 10vh;
+    width: 94vw;
+    position: fixed;
+    top: 0px;
+    left: 6vw;
+    padding-left: 2vw;
 }
 
-.main-container .resource, .main-container h3 {
-    padding: 16px 23px;
+#main-container {
+    height: 90vh;
+    width: 94vw;
+    position: fixed;
+    top: 10vh;
+    left: 6vw;
+    padding-left: 2vw;
 }
 
-.main-container h3 {
+#main-container h3 {
     margin: 0;
+    padding: 6px;
     color: #373E41;
     font-size: 20px;
     font-weight: bold;
     background-color: #ECEFF1;
 }
 
-.main-container h4 {
+#main-container h4 {
     margin: 0;
     font-size: 16px;
     font-weight: bold;
     line-height: 24px;
 }
 
-.main-container p {
+#main-container p {
     margin: 0;
+}
+
+#footer-container {
+    height: 4vh;
+    width: 94vw;
+    position: fixed;
+    bottom: 0px;
+    left: 6vw;
+    padding-left: 2vw;
+}
+
+/* NOTES */
+#notes-container {
+    width: 20vw;
+    height: 90%;
+    border: 1px solid #d6dbde;
+    padding: 6px;
+    border-radius: 4px;
+}
+
+
+
+/* ---- */
+i.mdi::before,
+span.mdi::before,
+button.mdi::before {
+    font-size: 24px;
+    line-height: 13px;
+}
+.btn.mdi::before,
+.btn .mdi::before {
+    position: relative;
+    top: 4px;
+}
+.btn-xs.mdi::before,
+.btn-xs .mdi::before {
+    font-size: 18px;
+    top: 3px;
+}
+.btn-sm.mdi::before,
+.btn-sm .mdi::before {
+    font-size: 18px;
+    top: 3px;
+}
+.dropdown-menu .mdi {
+    width: 18px;
+}
+.dropdown-menu .mdi::before {
+    position: relative;
+    top: 4px;
+    left: -8px;
+}
+.nav .mdi::before {
+    position: relative;
+    top: 4px;
+}
+.navbar .navbar-toggle .mdi::before {
+    position: relative;
+    top: 4px;
+    color: #FFF;
+}
+.breadcrumb .mdi::before {
+    position: relative;
+    top: 4px;
+}
+.breadcrumb a:hover {
+    text-decoration: none;
+}
+.breadcrumb a:hover span {
+    text-decoration: underline;
+}
+.alert .mdi::before {
+    position: relative;
+    top: 4px;
+    margin-right: 2px;
+}
+.input-group-addon .mdi::before {
+    position: relative;
+    top: 3px;
+}
+.navbar-brand .mdi::before {
+    position: relative;
+    top: 2px;
+    margin-right: 2px;
+}
+.list-group-item .mdi::before {
+    position: relative;
+    top: 3px;
+    left: -3px
 }
