--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,4 @@
 body {
-    font-family: Cambria, Georgia;
 }
 
 h1 {
@@ -21,7 +20,7 @@ a:hover {
 }
 
 #side-container {
-       height: 100vh;
+    height: 100vh;
     width: 6vw;
     background-color: #efefef;
     position: fixed;
@@ -32,20 +31,20 @@ a:hover {
     padding-top: 4vh;
 }
 
+#side-container div { color: #6f6f6f; margin-top: 20px; cursor: pointer; transition: color .5s; }
+#side-container div:hover { color: #336699; }
 #header-container {
-    height: 10vh;
+    height: 6vh;
     width: 94vw;
-    position: fixed;
-    top: 0px;
-    left: 6vw;
-    padding-left: 2vw;
+    padding-left: 7vw;
 }
-
+.mdi-angular:before {
+    font-size: 40px !important;
+}
 #main-container {
     height: 90vh;
     width: 94vw;
-    position: fixed;
-    top: 10vh;
+    position: relative;
     left: 6vw;
     padding-left: 2vw;
 }
@@ -72,11 +71,13 @@ a:hover {
 
 #footer-container {
     height: 4vh;
-    width: 94vw;
+    width: calc(100% - 6vw);
     position: fixed;
     bottom: 0px;
     left: 6vw;
     padding-left: 2vw;
+    background-color: white;
+    padding-right: 2vw;
 }
 
 /* NOTES */
@@ -88,7 +89,36 @@ a:hover {
     border-radius: 4px;
 }
 
+.note {
+    padding: 10px;
+    border-bottom: solid 1px #e2e2e2;
+    transition: all .5s;
+}
 
+.note h4 .small {
+   transition: all .5s;
+}
+
+.note:hover {
+    background-color: darkorange;
+    color: white;
+    cursor: pointer;
+}
+
+ .note:hover h4 .small {
+    color: white !important;
+ }
+
+.note h4 {
+    padding-bottom: 10px;
+}
+
+.note p {
+    text-align: justify;
+}
+.note .autor { 
+    font-style: italic;
+}
 
 /* ---- */
 i.mdi::before,
