--- a/src/app/components/tpl/app.component.html
+++ b/src/app/components/tpl/app.component.html
@@ -22,7 +22,7 @@
 <section id="footer-container">
     <footer>
         <div class="pull-left">
-        <a routerLink="/">Home</a> | <a routerLink="/about" routerLinkActive="active">About</a>
+        <a routerLink="/">Home</a> | <a routerLink="/notes" routerLinkActive="active">Notes</a> | <a routerLink="/config" routerLinkActive="active">Config</a> | <a routerLink="/about" routerLinkActive="active">About</a>
         <span>&copy; 2016</span>
         </div>
         <div class="pull-right"><a href="https://github.com/tkc111/cursoangular2" target="blank_"><i class="mdi mdi-github-circle" aria-hidden="true"></i></a></div>
