--- a/src/app/modules/notes/components/tpl/note.mini.component.html
+++ b/src/app/modules/notes/components/tpl/note.mini.component.html
@@ -1,4 +1,4 @@
-<div class="note">
+<div class="note" [routerLink]="['/note/', note.id]" routerLinkActive="active">
     <h4>
         {{ note.titulo }}
         <div class="small">
